Modified URL classname