@@ -5,11 +5,11 @@ import io.appium.java_client.android.AndroidDriver;
 import io.appium.java_client.android.options.UiAutomator2Options;
 import io.appium.java_client.remote.AutomationName;
 import io.appium.java_client.remote.MobilePlatform;
-import org.openqa.selenium.remote.CapabilityType;
-import org.openqa.selenium.remote.DesiredCapabilities;
 
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.time.Duration;
 import java.time.temporal.ChronoUnit;
@@ -17,7 +17,7 @@ import java.time.temporal.ChronoUnit;
 public class TestAndroidOptions {
 
     @org.testng.annotations.Test
-    public void testAndroid() throws MalformedURLException {
+    public void testAndroid() throws MalformedURLException, URISyntaxException {
         String appUrl = System.getProperty("user.dir")+ File.separator+"src"+File.separator+"main"+File.separator
                 +"resources"+File.separator+"ApiDemos-debug.apk";
 
@@ -31,7 +31,7 @@ public class TestAndroidOptions {
                 .setPlatformName(MobilePlatform.ANDROID).setAvd("Pixel_9_Pro_XL")
                 .setAvdLaunchTimeout(Duration.of(180, ChronoUnit.SECONDS));
 
-        URL url = new URL("http://0.0.0.0:4723/");
+        URL url = new URI("http://0.0.0.0:4723/").toURL();
         AppiumDriver driver = new AndroidDriver(url, uiAutomator2Options);
     }
 }
